# free-api-client

./: README.md  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/application/: api_service.rs  mod.rs  request_service.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/enums/: header_enum.rs  method_enum.rs  mod.rs  parameter_enum.rs
src-tauri/src/domain/models/: api_model.rs  app_data_model.rs  app_state_model.rs  collection_model.rs  http_response.rs  mod.rs
src-tauri/src/infrastructure/: file_service.rs
src-tauri/src/interfaces/: api_command.rs  file_command.rs  mod.rs  request_command.rs  util_command.rs
src/components/requestEditor/: Headers.vue  Methods.vue  Parameters.vue
src/components/sidebar/: AddingItem.vue  Apis.vue  Collections.vue  SidebarContextMenu.vue  SidebarTabs.vue
src/composables/: useHttpUtils.js
src/views/: ApiClient.vue  RequestEditor.vue  ResponseViewer.vue  Sidebar.vue
