[package]
name = "free-api-client"
version = "1.0.0"
description = "A Tauri App"
authors = ["chhun9"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2.0.3"
reqwest = {version = "0.12", features = ["json"] }
tokio = {version = "1.42.0", features= ["full"] }
tokio-util = "0.7.13"
log = "0.4.21"
strum = "0.26.3"
strum_macros = "0.26.4"
uuid = { version = "1", features = ["v4"] }
dirs = "4.0"
